[project]
name = "personal-llm-assistant"
version = "0.2.0"
description = "Personal LLM Assistant with Claude Sonnet 4.5"
requires-python = ">=3.11"
dependencies = [
    "streamlit>=1.39.0",
    "anthropic>=0.39.0",
    "python-dotenv>=1.0.0",
    "sqlalchemy>=2.0.23",
    "pandas>=2.1.3",
    "plotly>=5.18.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.3",
    "black>=23.11.0",
    "ruff>=0.1.6",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.black]
line-length = 100
target-version = ["py311"]